--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -5,6 +5,64 @@
 		&__wrapper
 			align-items: center
 	.advantages
-		padding: 60px 10px 70px 10px
+		padding: 55px 10px 65px 10px
 		&__subtitle
 			font-size: 12px
+			padding-left: 10px
+			padding-right: 10px
+
+@media (max-width: 767px)
+	.header
+		&__phone
+			font-size: 16px
+		&__official
+			display: none
+	.advantages
+		&__title
+			font-size: 16px
+
+@media (max-width: 575px)
+	.promo
+		padding-left: 10px
+		padding-right: 10px
+		&__wrapper
+			align-items: center
+		&__icons
+			width: 300px
+		&__header
+			font-size: 28px
+		&__subheader
+			font-size: 16px
+		&__icon
+			width: 100px
+			font-size: 12px
+	.button
+		width: 130px
+	.button_main
+		width: 270px
+    	height: 50px
+	.header
+		&__phone
+			font-size: 12px
+		&__contacts
+			margin-left: 20px
+	.advantages
+		padding: 55px 10px 65px 10px
+		&__subtitle
+			font-size: 13px
+			padding-left: 10px
+			padding-right: 10px
+		&__icons
+			display: flex
+			flex-direction: column
+			justify-content: center
+			align-items: center
+			margin-top: 20px
+		&__icon
+			margin-top: 25px
+		&__label
+			font-size: 25px
+		&__title
+			margin-top: 15px
+		&__subtitle
+			margin-top: 15px
