add form carousel tabs and reviews, mobile optimization

--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -10,6 +10,74 @@
 			font-size: 12px
 			padding-left: 10px
 			padding-right: 10px
+	.consultation
+		padding-left: 10px
+		padding-right: 10px
+	.slick-dots
+		position: absolute
+		bottom: -45px
+		display: block
+		width: 100%
+		padding: 0
+		margin: 0
+		list-style-type: none
+		text-align: center
+		li
+			position: relative
+			display: inline-block
+			width: 20px
+			height: 20px
+			margin: 0 5px
+			padding: 0
+			cursor: pointer
+			button
+				font-size: 0
+				line-height: 0
+				display: block
+				width: 20px
+				height: 20px
+				padding: 5px
+				cursor: pointer
+				color: transparent
+				border: 0
+				outline: none
+				background: transparent
+				&:before
+					font-family: 'slick'
+					font-size: 30px
+					line-height: 20px
+					position: absolute
+					top: 0
+					left: 0
+					width: 20px
+					height: 20px
+					content: '•'
+					text-align: center
+					opacity: .25
+					color: black
+				&:hover, &:focus
+					outline: none
+					&:before
+						opacity: 1
+	.slick-dots li.slick-active button:before
+		opacity: .75
+		color: black
+	.carousel
+		&__inner
+			width: 650px
+	.catalog
+		padding-left: 10px
+		padding-right: 10px
+		&__content
+			justify-content: space-around
+		&-item
+			width: 300px
+	.reviews
+		padding-left: 20px
+		padding-right: 20px
+		&__img
+			margin-right: 50px
+
 
 @media (max-width: 767px)
 	.header
@@ -20,6 +88,18 @@
 	.advantages
 		&__title
 			font-size: 16px
+	.consultation
+		padding: 80px 10px 82px 10px
+		.feed-form
+			margin: 36px auto 0 auto
+	.carousel
+		&__inner
+			width: 500px
+	.catalog
+		&__tab
+			width: 170px
+			font-size: 16px
+			
 
 @media (max-width: 575px)
 	.promo
@@ -66,3 +146,35 @@
 			margin-top: 15px
 		&__subtitle
 			margin-top: 15px
+	.consultation
+		&__title
+			font-size: 28px
+		&__descr
+			margin-top: 50px
+			font-size: 16px
+		.button_submit
+			width: 100%
+	.carousel
+		&__inner
+			width: 300px
+	.catalog
+		&__title
+			font-size: 24px
+		&__tabs
+			flex-direction: column
+			margin-top: 40px
+		&__tab
+			margin-bottom: 15px
+	.reviews
+		h2
+			font-size: 26px
+		&__img
+			margin-right: 0
+			margin-bottom: 10px
+		&__person
+			flex-direction: column
+			align-items: center
+		&__name, &__marafon
+			text-align: center
+		&__text
+			font-size: 14px
