--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -3,6 +3,11 @@
 @import 'block/header'
 @import 'block/buttons'
 @import 'block/advantages'
+@import 'block/consultation'
+@import "block/forms"
+@import "block/carousel"
+@import 'block/catalog'
+@import 'block/reviews'
 @import 'base/media'
 *
 	font-family: 'Museo Sans Cyrl', sans-serif
