--- a/src/sass/block/_buttons.sass
+++ b/src/sass/block/_buttons.sass
@@ -14,3 +14,12 @@
 		height: 50px
 		font-size: 16px
 		margin-top: 67px
+	&_submit
+		width: 100%
+		height: 55px
+		color: #ffffff
+		font-size: 16px
+	&_mini
+		width: 131px
+		height: 40px
+		font-size: 14px
