--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -8,6 +8,8 @@
 @import "block/carousel"
 @import 'block/catalog'
 @import 'block/reviews'
+@import 'block/footer'
+@import 'block/modal'
 @import 'base/media'
 *
 	font-family: 'Museo Sans Cyrl', sans-serif
