--- a/src/sass/block/_buttons.sass
+++ b/src/sass/block/_buttons.sass
@@ -14,11 +14,17 @@
 		height: 50px
 		font-size: 16px
 		margin-top: 67px
+		transition: 0.3s all
+		&:hover
+			box-shadow: 0px 0px 20px #ffffff
 	&_submit
 		width: 100%
 		height: 55px
 		color: #ffffff
 		font-size: 16px
+		transition: 0.3s all
+		&:hover
+			box-shadow: 0px 0px 20px #ffffff
 	&_mini
 		width: 131px
 		height: 40px
