--- a/src/sass/block/_advantages.sass
+++ b/src/sass/block/_advantages.sass
@@ -35,3 +35,11 @@
 			text-decoration: underline
 			text-transform: uppercase
 			color: $main-color
+	&__heart
+		&_animated
+			animation-name: heartbeat
+			animation-duration: 1.5s
+			animation-timing-function: ease
+			animation-iteration-count: infinite
+			&:hover
+				animation-play-state: paused
