--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,4 +1,5 @@
 @import 'base/variables'
+@import 'base/animations'
 @import 'block/promo'
 @import 'block/header'
 @import 'block/buttons'
@@ -10,6 +11,7 @@
 @import 'block/reviews'
 @import 'block/footer'
 @import 'block/modal'
+@import 'block/pageup'
 @import 'base/media'
 *
 	font-family: 'Museo Sans Cyrl', sans-serif
