--- a/src/sass/block/_consultation.sass
+++ b/src/sass/block/_consultation.sass
@@ -1,7 +1,7 @@
 .consultation
 	min-height: 680px
 	padding: 100px 0 92px 0
-	background: url('../../img/bg/bg2.jpg') center (center / cover) no-repeat
+	background: url('../img/bg/bg2.jpg') center (center / cover) no-repeat
 	&__title
 		color: #ffffff
 		font-size: 36px
@@ -15,3 +15,10 @@
 		font-weight: 500
 		text-align: left
 		margin-top: 80px
+	.error
+		border: 1px solid red
+	label.error
+		color: #ffff
+		border: none
+		text-align: center
+		margin-bottom: 15px
